src/app.css
:root {
	/* Font */
	--font-body: 'IBM Plex Sans', sans-serif;
	--font-heading: 'IBM Plex Sans', sans-serif;

	/* Colors */
	--brand: #ff9416;
	--brand-light: #fff5e8;
	--white: white;
	--black: black;
	--text: var(--black);
	--bg: var(--white);
	--bg-subtle: var(--brand-light);

	/* Buttons */
	--btn-bg: var(--brand);
	--btn-hover-bg: #ffa945;
	--btn-active-bg: #e6891d;
	--btn-active-border: var(--black);
	--btn-focus-bg: var(--btn-bg);
	--btn-focus-border: #0097d8;

	--btn-alt-bg: var(--white);
	--btn-alt-hover-bg: #fff5e8;
	--btn-alt-active-bg: #ffead0;
	--btn-alt-active-border: var(--black);
	--btn-alt-focus-bg: var(--btn-alt-bg);
	--btn-alt-focus-border: #0097d8;
}

/* @media (prefers-color-scheme: light) {
	:root {
		color-scheme: light;

		--brand: var(--brand);
	}
}

[color-scheme='dark'] {
	color-scheme: dark;

	--brand: var(--brand-dark);
	--brand-subtle: hsl(32, 100%, 75%);
	--text: white;
	--bg: black;
	--bg-subtle: hsl(32, 100%, 20%);
}

[color-scheme='light'] {
	color-scheme: light;

	--brand: var(--brand);
	--brand-subtle: hsl(32, 100%, 35%);
	--text: black;
} */

html,
body {
	height: 100%;
	width: 100vw;
}

html {
	color-scheme: light;
}

body {
	color: var(--text);
	background-color: var(--bg);
	accent-color: var(--brand);
	font-family: var(--font-body);
	font-size: 1rem;
	line-height: 1.3;
}
/* 
img {
	border-radius: var(--radius-3);
} */
/* 
ul,
ol {
	list-style: none;
	padding: 0;
}

li {
	padding-inline-start: 0;
} */

h1,
h2,
h3,
h4,
h5 {
	font-family: var(--font-heading);
}

h1 {
	font-size: 3.5rem;
	font-weight: 700;
	margin-bottom: 1rem;
}

h2 {
	font-size: 2rem;
	font-weight: 700;
	position: relative;
	width: fit-content;
	margin-bottom: 1rem;
}

.hero + section {
	margin-top: 100vh;
}
section + section {
	padding-top: 2rem;
}

@media (min-width: 640px) {
	h1 {
		margin-bottom: 2rem;
	}

	h2 {
		margin-bottom: 4rem;
	}

	h2::before {
		content: '';
		background-color: #ff9416;
		height: 1.125rem;
		position: absolute;
		width: 100%;
		transform: translate(1.5rem, 130%);
		z-index: -1;
	}
	.hero + section {
		margin-top: calc(100vh - 6rem);
	}
	section + section {
		padding-top: 7.5rem;
	}
}

h3 {
	font-size: 1.5rem;
	font-weight: 500;
}

.long-text {
	font-size: 1.125rem;
}

.small-text {
	font-size: 0.875rem;
}

@media (max-width: 40rem) {
	h1 {
		font-size: 2rem;
	}
	h2 {
		font-size: 1.5rem;
	}
}

a {
	color: var(--brand-subtle);
	text-decoration: underline;
}

a:hover {
	color: var(--brand);
}

.prose {
	line-height: 1.5em;
}

.prose :is(h2, h3, h4, h5, h6) {
	margin-top: 2rem;
	margin-bottom: 1rem;
}

.prose p:not(:is(h2, h3, h4, h5, h6) + p) {
	margin-top: 1rem;
}

.prose :is(ul, ol) {
	list-style-type: disc;
	padding-left: 1rem;
	line-height: 1.5;
}

.prose :is(ul, ol) li {
	margin-block: 0.3rem;
	padding-inline-start: 0.5rem;
}

.prose pre {
	max-inline-size: 100%;
	padding: 1rem;
	border-radius: 8px;
	tab-size: 2;
}

.prose blockquote {
	border-left: 4px solid var(--brand);
	padding-left: 1rem;
	font-style: italic;
}

.prose img {
	max-inline-size: 100%;
}

form {
	display: flex;
	flex-direction: column;
	max-width: 20rem;
}

form label {
	margin-bottom: 0.5rem;
	display: flex;
	flex-direction: column;
}

input:focus,
textarea:focus {
	outline: var(--brand) auto 1px;
}

.reset-button,
.button-to-link {
	border: inherit;
	background: inherit;
	text-align: inherit;
	font: inherit;
	margin: inherit;
	padding: inherit;
	color: inherit;
}

.pseudo-link,
.button-to-link {
	cursor: pointer;
}

.pseudo-link:hover,
.button-to-link:hover {
	text-decoration: underline;
}

p {
	margin-bottom: 1.5rem;
}

